[package]
name = "diffie-hellman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = { version = "0.4.1", features = ["rand", "serde"] }
rand = "0.8.5"
regex = "1.10.3"
log = "0.4.20"
env_logger = "0.11.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
